third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/max_encoded_len_ui/unsupported_variant.rs
use parity_scale_codec::{Encode, MaxEncodedLen};

#[derive(Encode)]
struct NotMel;

#[derive(Encode, MaxEncodedLen)]
enum UnsupportedVariant {
	NotMel(NotMel),
}

fn main() {}
